--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "lib": "vue-cli-service build --target lib --name vue-x-ui --dest lib packages/index.js"
   },
   "dependencies": {
+    "babel-loader": "^8.0.4",
     "vue": "^2.5.21"
   },
   "devDependencies": {
