--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "vue-x-ui",
-  "version": "0.1.0",
-  "private": true,
+  "name": "xmf-ui",
+  "version": "0.1.1",
+  "description": "基于Vue的UI组件",
+  "main": "lib/xmf-ui.umd.min.js",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "lib": "vue-cli-service build --target lib --name vue-x-ui --dest lib packages/index.js"
+    "lib": "vue-cli-service build --target lib --name xmf-ui --dest lib packages/index.js"
   },
   "dependencies": {
-    "babel-loader": "^8.0.4",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
     "vue": "^2.5.21"
   },
   "devDependencies": {
