--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmf-ui",
-  "version": "0.2.6",
+  "version": "0.2.8",
   "description": "基于Vue的UI组件",
   "main": "lib/xmf-ui.umd.min.js",
   "private": false,
@@ -11,12 +11,16 @@
     "lib": "vue-cli-service build --target lib --name xmf-ui --dest lib packages/index.js"
   },
   "dependencies": {
-    "@vue/eslint-config-standard": "^4.0.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.1.0",
+   
+  },
+  "peerDependencies": {
     "vue": "^2.5.21"
   },
   "devDependencies": {
+    "@vue/eslint-config-standard": "^4.0.0",
+    "less": "^2.7.3",
+    "less-loader": "^4.1.0",
+    "vue": "^2.5.21",
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
     "@vue/cli-service": "^3.0.4",
