--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xmf-ui",
-  "version": "0.2.9",
+  "version": "0.2.10",
   "description": "基于Vue的UI组件",
   "main": "lib/xmf-ui.umd.min.js",
   "private": false,
@@ -11,7 +11,8 @@
     "lib": "vue-cli-service build --target lib --name xmf-ui --dest lib packages/index.js"
   },
   "dependencies": {
-    "popper.js": "^1.14.7"
+    "popper.js": "^1.14.7",
+    "v-click-outside-x": "^4.0.1"
   },
   "peerDependencies": {
     "vue": "^2.5.21"
